--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -7,7 +7,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
     </style>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap");
     </style>
     <!-- displays site properly based on user's device -->
 
@@ -28,6 +28,19 @@
       <img class="img1" src="images/image-product-desktop.jpg" alt="" />
       <div class="perfume"><span>PERFUME</span></div>
       <div class="text2"><span>Gabrielle Essence Eau De Parfum</span></div>
+      <div class="text3">
+        <span
+          >A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.</span
+        >
+      </div>
+      <div class="priceLine">
+        <div class="currentPrice"><span>$149.99</span></div>
+        <div class="oldPrice"><span>$169.99</span></div>
+      </div>
+      <div class="button">
+        <div class="text4"><span>Add to Cart</span></div>
+      </div>
     </div>
 
     <!-- Preview
