--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -6,9 +6,12 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
     </style>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap");
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap"
+      rel="stylesheet"
+    />
     <!-- displays site properly based on user's device -->
 
     <link
