--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -41,9 +41,10 @@
         <div class="currentPrice"><span>$149.99</span></div>
         <div class="oldPrice"><span>$169.99</span></div>
       </div>
-      <div class="button">
-        <div class="text4"><span>Add to Cart</span></div>
-      </div>
+      <br />
+      <button>
+        <span>Add To Cart</span>
+      </button>
     </div>
 
     <!-- Preview
